# ScanOps

./: .gitignore  DESIGN.md  HANDOFF.md  README.md  REBUILD.md  START.bat  THIRD_PARTY_NOTICES.md
.claude/: launch.json
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/scanops/: __init__.py  config.py  db.py  main.py  models.py  schemas.py  security.py  spreadsheet.py
backend/scanops/api/: assets.py  audit.py  auth.py  dashboard.py  deps.py  events.py  findings.py  heatmap.py  notifications.py  reports.py  rules.py  scans.py  users.py
backend/scanops/scanning/: chunker.py  engine_runner.py  ingest.py  nmap_parse.py  nmap_runner.py  presets.py  scan_options.py  scope.py  taxonomy.py
backend/scanops/seed/: bootstrap.py  categories.json
backend/tests/: conftest.py  test_assets_notify.py  test_audit.py  test_auth.py  test_chunker.py  test_dashboard_report.py  test_default_port_and_dates.py  test_engine_runner.py  test_gap_edges.py  test_heatmap.py  test_ingest.py  test_raw_command.py  test_real_scan.py  test_reconcile.py  test_rules_events_export.py  test_runner.py  test_scans_api.py  test_scope.py  test_standalone_scanner.py  test_taxonomy.py
backend/tests/fixtures/: sample_scan.xml  scanA.xml
engine/: README.md  lab-spec.json  rescan-spec.json
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js  vitest.setup.js
lab/: README.md  docker-compose.yml  staged_scan.py
live_sample/: asset_scan_sample.xml  build_ledger_demo.py  demo_out.txt  docker-compose.yml  gen_nmap_sample.py  (+11 more)
(+141 files in other folders)
